GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>YEAR(
TODAY()) - YEAR(Birthdate) - 
IF(
OR((
MONTH(TODAY())
 &lt; 
MONTH(Birthdate)),AND(MONTH(TODAY()) == MONTH(Birthdate),DAY(TODAY()) &lt; DAY(Birthdate)
)),1,0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>