GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>We need to know if the provider is an Agency or ICN (Independent Contracted Nurse). Contracted Assessors have priority for Opportunities.</description>
    <inlineHelpText>Is Agency - CTA Icon</inlineHelpText>
    <label>Agency</label>
    <type>Checkbox</type>
</CustomField>