GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Agency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Agency_Contact__c</fullName>
    <description>To avoid delays in reaching the &apos;right area&apos;</description>
    <label>Agency Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>