GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/ALT_Email__c.field-meta.xml
<CustomField>
    <fullName>ALT_Email__c</fullName>
    <description>Alternate Email</description>
    <label>ALT Email</label>
    <type>Email</type>
</CustomField>