GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/contact_recordType_name_formula__c.field-meta.xml
<CustomField>
    <fullName>contact_recordType_name_formula__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>