GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Contracted_Rate__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Rate__c</fullName>
    <description>Agreed upon rate for a particular service</description>
    <label>Contracted Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>