GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Deceased__c.field-meta.xml
<CustomField>
    <fullName>Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Deceased</description>
    <inlineHelpText>Is Deceased</inlineHelpText>
    <label>Deceased</label>
    <type>Checkbox</type>
</CustomField>