GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Digital_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Digital_Assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trained on Youreka</description>
    <inlineHelpText>Youreka Enabled</inlineHelpText>
    <label>Digital Assessment</label>
    <type>Checkbox</type>
</CustomField>