GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <description>Back end (accounting)</description>
    <inlineHelpText>Agency Federal ID</inlineHelpText>
    <label>EIN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>