GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/EXT__c.field-meta.xml
<CustomField>
    <fullName>EXT__c</fullName>
    <label>EXT</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>