GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Has_DUP_Files__c.field-meta.xml
<CustomField>
    <fullName>Has_DUP_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has DUP Files</label>
    <type>Checkbox</type>
</CustomField>