GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Interview_Type__c</fullName>
    <description>Video/Virtual or Telephonic</description>
    <label>Interview Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Interviewer_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Video / Virtual</fullName>
            </value>
            <value>
                <fullName>Telephonic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>