GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Interviewer_Type__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_Type__c</fullName>
    <label>Interviewer Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Interviewer__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinician</fullName>
            </value>
            <value>
                <fullName>Non-Clinician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>