GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Is_Logged_in__c.field-meta.xml
<CustomField>
    <fullName>Is_Logged_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Logged in</label>
    <type>Checkbox</type>
</CustomField>