GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Last_Date_Background__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_Background__c</fullName>
    <description>Need to have the ability to set reminders to the NNN for expiration date</description>
    <label>Last Date - Background</label>
    <type>Date</type>
</CustomField>