GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>Back end (recruiters)</description>
    <label>Lead Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>