GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Legacy_ID_or_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID_or_Provider_ID__c</fullName>
    <label>Legacy ID or Provider ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>