GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Interviewer_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>LPN</fullName>
            </value>
            <value>
                <fullName>LSW</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>