GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Licensed_States__c.field-meta.xml
<CustomField>
    <fullName>Licensed_States__c</fullName>
    <label>Licensed States</label>
    <length>255</length>
    <type>Text</type>
</CustomField>