GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Max_Cases_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Max_Cases_Assigned__c</fullName>
    <description>Number of case files a nurse can have at one time</description>
    <inlineHelpText>Max limit of cases assigned</inlineHelpText>
    <label>Max Cases Assigned</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>