GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Max_CCS_Workload_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_CCS_Workload_Score__c</fullName>
    <label>Max CCS Workload Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>