GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Notes_Assessor__c.field-meta.xml
<CustomField>
    <fullName>Notes_Assessor__c</fullName>
    <description>Ability to free text</description>
    <label>Notes - Assessor</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>