GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Nurse_Type__c.field-meta.xml
<CustomField>
    <fullName>Nurse_Type__c</fullName>
    <description>Only need RN, LPN and DSP</description>
    <label>Nurse Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>LPN</fullName>
            </value>
            <value>
                <fullName>DSP</fullName>
            </value>
            <value>
                <fullName>RPN</fullName>
            </value>
            <value>
                <fullName>LVN</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>