GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Personal_ID__c.field-meta.xml
<CustomField>
    <fullName>Personal_ID__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>Personal ID</label>
    <type>AutoNumber</type>
</CustomField>