GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Potential_DUP__c.field-meta.xml
<CustomField>
    <fullName>Potential_DUP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Potential Duplicate</description>
    <inlineHelpText>Is Potential Duplicate</inlineHelpText>
    <label>Potential DUP</label>
    <type>Checkbox</type>
</CustomField>