GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Preferred_Communication_1__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Communication_1__c</fullName>
    <description>Communication preference</description>
    <inlineHelpText>Preferred Communication Method</inlineHelpText>
    <label>Preferred Communication 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Calls</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>