GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Preferred_Communication_3__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Communication_3__c</fullName>
    <label>Preferred Communication 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Calls</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>