GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>Provider_ID__c</fullName>
    <description>Back end, GUID, UI to Connect</description>
    <displayFormat>A-{000}</displayFormat>
    <label>Provider ID</label>
    <type>AutoNumber</type>
</CustomField>