GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Quality__c.field-meta.xml
<CustomField>
    <fullName>Quality__c</fullName>
    <description>Ties into the algorithm of nurse top picks in opportunities</description>
    <label>Quality</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>