GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Rating_Performance__c.field-meta.xml
<CustomField>
    <fullName>Rating_Performance__c</fullName>
    <description>Ties into the algorithm of nurse top picks in opportunities</description>
    <label>Rating - Performance</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>