GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Related_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact_Type__c</fullName>
    <label>Related Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>