GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Review_Needed__c.field-meta.xml
<CustomField>
    <fullName>Review_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should be able to QA review or send to review for QA</description>
    <label>Review Needed</label>
    <type>Checkbox</type>
</CustomField>