GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clinician</fullName>
            </value>
            <value>
                <fullName>CSR  - ASC</fullName>
            </value>
            <value>
                <fullName>NNN Administrator</fullName>
            </value>
            <value>
                <fullName>Conern Res Analyst</fullName>
            </value>
            <value>
                <fullName>QA Specialist</fullName>
            </value>
            <value>
                <fullName>FL License</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>ASC Intake Coordinator</fullName>
            </value>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>ASC OB Coordinator</fullName>
            </value>
            <value>
                <fullName>ASC  Editor Review /Data Entry</fullName>
            </value>
            <value>
                <fullName>ASC Document Matching</fullName>
            </value>
            <value>
                <fullName>ASC Peer Approval</fullName>
            </value>
            <value>
                <fullName>ASC Medical Records</fullName>
            </value>
            <value>
                <fullName>Clinician Review</fullName>
            </value>
            <value>
                <fullName>Recruiters</fullName>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>