GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date assessor was hired</description>
    <inlineHelpText>Start date with company</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>