GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>When the provider is unavailable, on hold, unknown or deleted the nurse should not be notified of any &apos;opportunities or be visible to a ASC/CSR&apos;.</description>
    <inlineHelpText>Active - Available for work
Inactive - No longer a provider
Hold - Unavailable until
Unknown - Availability unknown
Deleted - Archived</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Unavailable - Capacity Reached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>