GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Box is check marked then yes they want the text functionality</description>
    <label>Text</label>
    <type>Checkbox</type>
</CustomField>