GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description>Communication - file only queues up assessor time zone, never before 8 am assessor time</description>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central Time (US &amp; Canada)</fullName>
            </value>
            <value>
                <fullName>Guam, Port Moresby</fullName>
            </value>
            <value>
                <fullName>Caracas, La Paz</fullName>
            </value>
            <value>
                <fullName>Eastern Time (US &amp; Canada)</fullName>
            </value>
            <value>
                <fullName>Indiana (East)</fullName>
            </value>
            <value>
                <fullName>Mountain Time (US &amp; Canada)</fullName>
            </value>
            <value>
                <fullName>Arizona</fullName>
            </value>
            <value>
                <fullName>Pacific Time (US &amp; Canada)</fullName>
            </value>
            <value>
                <fullName>Alaska</fullName>
            </value>
            <value>
                <fullName>Hawaii</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>