GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Training_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Complete_Date__c</fullName>
    <description>Date Training Ended</description>
    <inlineHelpText>Training complete, ready for cases</inlineHelpText>
    <label>Training Complete Date</label>
    <type>Date</type>
</CustomField>