GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Training_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Start_Date__c</fullName>
    <description>Date training was started</description>
    <inlineHelpText>Pending completion of Training</inlineHelpText>
    <label>Training Start Date</label>
    <type>Date</type>
</CustomField>