GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Under_Contract__c.field-meta.xml
<CustomField>
    <fullName>Under_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CTA if Contracted</description>
    <inlineHelpText>Contracted with LTCG</inlineHelpText>
    <label>Under Contract</label>
    <type>Checkbox</type>
</CustomField>