GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <label>User Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>