GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Vendor_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Number__c</fullName>
    <description>This is for back end.</description>
    <label>Vendor Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>