GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Web_Login_System_Login__c.field-meta.xml
<CustomField>
    <fullName>Web_Login_System_Login__c</fullName>
    <label>Web Login - System Login</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>