GloablServices/keshavglobal/force-app/main/default/objects/Contact/fields/Windows_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Windows_User_ID__c</fullName>
    <label>Windows User ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>