GloablServices/keshavglobal/force-app/main/default/objects/Contact/recordTypes/Claimant.recordType-meta.xml
<RecordType>
    <fullName>Claimant</fullName>
    <active>true</active>
    <label>Claimant</label>
</RecordType>